--- a/src/scss/produits.scss
+++ b/src/scss/produits.scss
@@ -87,6 +87,48 @@
             display: flex;
             flex-direction: column;
 
+            .one-none {
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+                flex-wrap: wrap;
+
+                p {
+                    font-family: 'font-1';
+                    font-size: 18px;
+                    color: var(--color-second);
+                    margin-bottom: 15px;
+                }
+
+                .btn {
+                    width: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: end;
+                    margin-bottom: 20px;
+
+                    button {
+                        padding: 10px 14px;
+                        border: none;
+                        border-radius: 10px;
+                        background-color: var(--color-button);
+                        font-family: 'font-1';
+                        letter-spacing: 1.02px;
+                        color: var(--text-1);
+                        transition: 200ms all ease-in;
+
+                        &:hover {
+                            cursor: pointer;
+                            background-color: var(--hover);
+                            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.555);
+                        }
+                    }
+                }
+            }
+
             .card-prod {
                 width: 100%;
                 padding: 12px 5px;
