--- a/src/scss/view.scss
+++ b/src/scss/view.scss
@@ -123,6 +123,39 @@
                     height: 190px;
                     overflow: auto;
 
+                    .one-none {
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        flex-direction: column;
+                        flex-wrap: wrap;
+
+                        p {
+                            font-family: 'font-1';
+                            font-size: 16px;
+                            color: var(--color-principal);
+                            margin-bottom: 10px;
+                        }
+
+                        button {
+                            padding: 5px 10px;
+                            background-color: var(--color-principal);
+                            color: var(--text-1);
+                            border-radius: 10px;
+                            font-family: 'font-1';
+                            transition: background-color transform all 200ms ease-in;
+
+                            &:hover {
+                                cursor: pointer;
+                                background-color: var(--color-second);
+                                transform: translateY(-3px);
+                                box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.486);
+                            }
+                        }
+                    }
+
                     .cards {
                         width: 100%;
                         height: 40px;
