--- a/src/scss/produits.scss
+++ b/src/scss/produits.scss
@@ -107,7 +107,7 @@
                     width: 100%;
                     display: flex;
                     align-items: center;
-                    justify-content: end;
+                    justify-content: center;
                     margin-bottom: 20px;
 
                     button {
